--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ branches:
 language: objective-c
 
 env:
-   - TEST_DIR=HelloMap.Objective-C
+   - TEST_DIR=hellomap-cocoapods
 
 script: cd $TEST_DIR && xcodebuild -workspace $TEST_DIR.xcworkspace -scheme $TEST_DIR -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
