--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ osx_image: xcode7.2
 env:
    - TEST_DIR=hellomap-cocoapods
 
-script: cd $TEST_DIR && pod install && xcodebuild -workspace $TEST_DIR.xcworkspace -scheme $TEST_DIR -sdk iphonesimulator -arch "i386" ONLY_ACTIVE_ARCH=NO VALID_ARCHS="i386 x86_64"
+script: cd $TEST_DIR && pod repo update && pod install && xcodebuild -workspace $TEST_DIR.xcworkspace -scheme $TEST_DIR -sdk iphonesimulator -arch "i386" ONLY_ACTIVE_ARCH=NO VALID_ARCHS="i386 x86_64"
